--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '2856087738';
+    const serviceWorkerVersion = "3898371065";
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
