--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-NX7WPNQL');</script>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-51QX1KBS1H"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-51QX1KBS1H');
+  </script>
+
   <!-- End Google Tag Manager -->
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -51,7 +61,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    const serviceWorkerVersion = "3538490984";
+    const serviceWorkerVersion = "4157070093";
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
